--- a/xpdc/WebContent/WEB-INF/messages.properties
+++ b/xpdc/WebContent/WEB-INF/messages.properties
@@ -2,8 +2,8 @@
 ! kenapa diletakkan di WEB-INF, dan bukan di classpath (JavaSource)? Agar bisa reloadable saat aplikasi sedang berjalan (tanpa perlu restart)
 
 ! Global messages
-	company.name=CV Sukses Makmur Angkutan
-	company.address=Kantor Pusat Jakarta\: Jl. Peta Barat Ruko No 88 G, Cengkareng - Jakarta Barat\nTelp/Fax. (021) 5456461 HP. 0811 982 927\nCab. Pangkal Pinang\: Jl. Depati Hamzah No. 36 Air Itam\nTelp. (0717) 425 6045 - 46 - 47 Fax. (0717) 431171
+	company.name=PT Asuransi Jiwa BCA (BCA Life)
+	company.address=Chase Plaza 22nd Floor\nJl. Jend. Sudirman Kav.21\nJakarta Selatan 12920\nT. +6221 2188 8000\nF. +6221 2934 7977
 	company.copyright=Copyright &#169; {0} - All Rights Reserved
 
 ! Error messages untuk template Spring (lengkapnya lihat API docs untuk org.springframework.validation.DefaultMessageCodesResolver)
